@@ -1,7 +1,7 @@
 package dmu.dasom.api.domain.news.service;
 
-import dmu.dasom.api.global.file.dto.FileResponseDto;
-import dmu.dasom.api.global.file.entity.FileEntity;
+import dmu.dasom.api.domain.news.dto.NewsCreationResponseDto;
+import dmu.dasom.api.global.file.enums.FileType;
 import dmu.dasom.api.global.file.service.FileService;
 import dmu.dasom.api.domain.common.exception.CustomException;
 import dmu.dasom.api.domain.common.exception.ErrorCode;
@@ -14,10 +14,10 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class NewsService {
 
     private final NewsRepository newsRepository;
@@ -25,15 +25,18 @@ public class NewsService {
 
     // 전체 뉴스 조회
     public List<NewsResponseDto> getAllNews() {
-        return newsRepository.findAll().stream()
-                .map(news -> NewsResponseDto.builder()
-                        .id(news.getId())
-                        .title(news.getTitle())
-                        .content(news.getContent())
-                        .createdAt(news.getCreatedAt())
-                        .imageUrls(news.getImageUrls())
-                        .build())
-                .collect(Collectors.toList());
+        List<NewsEntity> news = newsRepository.findAll();
+
+//        List<FileResponseDto> files = fileService.getFirstFileByTypeAndTargetId(
+//            FileType.NEWS,
+//            news.stream()
+//                .map(NewsEntity::getId)
+//                .toList()
+//        );
+
+        return news.stream()
+            .map(NewsEntity::toResponseDto)
+            .toList();
     }
 
     // 개별 뉴스 조회
@@ -41,31 +44,13 @@ public class NewsService {
         NewsEntity news = newsRepository.findById(id)
                 .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
 
-        return NewsResponseDto.builder()
-                .id(news.getId())
-                .title(news.getTitle())
-                .content(news.getContent())
-                .createdAt(news.getCreatedAt())
-                .imageUrls(news.getImageUrls())
-                .build();
+        return news.toResponseDto(fileService.getFilesByTypeAndTargetId(FileType.NEWS, id));
     }
 
-    // 뉴스 생성
+    // 뉴스 생성 (생성된 뉴스 ID 반환)
     @Transactional
-    public NewsResponseDto createNews(NewsRequestDto requestDto) {
-        List<FileResponseDto> uploadedFiles = fileService.getFilesByIds(requestDto.getFileIds());
-
-        List<String> base64Images = uploadedFiles.stream()
-                .map(file -> "data:" + file.getFileType() + ";base64," + file.getBase64Data())
-                .collect(Collectors.toList());
-
-        NewsEntity news = NewsEntity.builder()
-                .title(requestDto.getTitle())
-                .content(requestDto.getContent())
-                .imageUrls(base64Images)
-                .build();
-
-        return newsRepository.save(news).toResponseDto();
+    public NewsCreationResponseDto createNews(NewsRequestDto requestDto) {
+        return new NewsCreationResponseDto(newsRepository.save(requestDto.toEntity()).getId());
     }
 
     // 뉴스 수정
@@ -74,14 +59,7 @@ public class NewsService {
         NewsEntity news = newsRepository.findById(id)
                 .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
 
-        // fileEntity -> response로 수정
-        List<FileResponseDto> uploadedFiles = fileService.getFilesByIds(requestDto.getFileIds());
-
-        List<String> base64Images = uploadedFiles.stream()
-                .map(file -> "data:" + file.getFileType() + ";base64," + file.getBase64Data())
-                .collect(Collectors.toList());
-
-        news.update(requestDto.getTitle(), requestDto.getContent(), base64Images);
+        news.update(requestDto.getTitle(), requestDto.getContent());
 
         return news.toResponseDto();
     }
@@ -92,6 +70,7 @@ public class NewsService {
         NewsEntity news = newsRepository.findById(id)
                 .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND));
 
+        fileService.deleteFilesByTypeAndTargetId(FileType.NEWS, news.getId());
         newsRepository.delete(news);
     }
 
